webapps/test/v1/WEB-INF/jsp/error/405.jsp
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
<head>
<meta charset="UTF-8" />
<link rel="stylesheet" href="${pageContext.request.contextPath}/css/error.css">
<title>405 Method Not Allowed</title>
</head>
<body>
	<div class="error-container">
		<h1>405 Method Not Allowed</h1>
		<p>The method you are using to access the file is not allowed.</p>
	</div>
</body>
</html>